# Design-Doc-template

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docs/design/: index.md
