[project]
name = "design-docs"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kobyn", email = "mail@kobyn.net" }
]
dependencies = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/design_docs"]

[tool.rye.scripts]
start = "mkdocs serve"
